Bug 824484 - Fix race condition between stream wrapper destructor and nsCacheService::CloseAllStreams(), r=hurley